fix: vrsjmp items nowrap

--- a/vrsjmp/src/styles.css
+++ b/vrsjmp/src/styles.css
@@ -250,6 +250,10 @@ html, body {
     transition: all 150ms ease;
     transition-property: none;
     user-select: none;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .item:first-child {
